-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
[root@el8-mds2 ~]# lnetctl udsp add
add:
- udsp:
errno: -1
descr: "The combination of src, dst and rte is not supported"
[root@el8-mds2 ~]#
There's also a typo here:
/home/hornc/lustre-wc-rel/lustre/../lnet/utils/lnetctl udsp add --src --prio 1
add:
- udsp:
errno: -22
descr:
ailed to parse src parameter"